# qa_guru_API

./: README.md  helper.py  pyproject.toml  pytest.ini  requirements.txt
notifications/: config.json
schema/: patch_update_user.json
tests/: test_schema.py  tests_api.py  tests_schema.py
tests_open_api/: conftest.py  tests_api.py  tests_schema.py
utils/: helper.py  module.py  modules.py
utils/schema/: get_list.json  post_create_user.json
