[tool.poetry]
name = "hw-19"
version = "0.1.0"
description = "hw_19"
authors = ["YuliyaShkretova <129888062+YuliyaShkretova@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hw_19"}]

[tool.poetry.dependencies]
python = "3.10"
requests = "2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
